--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,13 @@
             "webRoot": "${workspaceFolder}"
         },
         {
+            "name": "Launch Edge",
+            "request": "launch",
+            "type": "msedge",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
             "type": "msedge",
             "request": "launch",
             "name": "Open index.html",
